--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-react": "^7.14.3",
     "gatsby-plugin-postcss": "^2.1.7",
     "gatsby-plugin-react-svg": "^2.1.2",
+    "json-server": "^0.15.1",
     "prettier": "^1.18.2"
   },
   "repository": {
