--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,9 @@
   "root": true,
   "rules": {
     "comma-dangle": ["error", "never"],
-    "prettier/prettier": ["error"]
+    "prettier/prettier": ["error"],
+    "import/no-cycle": [0, { "maxDepth": 5 }],
+    "react/jsx-props-no-spreading": [0]
   }
 }
   
