--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
     "postcss-url": "^8.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.1",
+    "reselect": "^4.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
