--- a/.gitignore
+++ b/.gitignore
@@ -65,8 +65,12 @@ public
 yarn-error.log
 .pnp/
 .pnp.js
+
 # Yarn Integrity file
 .yarn-integrity
 
 # Visual Code workspace
 .code-workspace
+
+# data set .json
+db.json
