--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,9 @@
     "comma-dangle": ["error", "never"],
     "prettier/prettier": ["error"],
     "import/no-cycle": [0, { "maxDepth": 5 }],
-    "react/jsx-props-no-spreading": [0]
+    "react/jsx-props-no-spreading": [0],
+    "import/no-useless-path-segments": [0, {
+      "noUselessIndex": false
+    }]
   }
 }
