--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
     "react/jsx-props-no-spreading": [0],
     "import/no-useless-path-segments": [0, {
       "noUselessIndex": false
-    }]
+    }],
+    "jsx-a11y/label-has-associated-control": "off"
   }
 }
