Configure lint to recognize Input as a control component for a label

--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,9 @@
     "import/no-useless-path-segments": [0, {
       "noUselessIndex": false
     }],
-    "jsx-a11y/label-has-associated-control": "off"
+    "jsx-a11y/label-has-associated-control": [ 2, {
+      "controlComponents": ["Input"],
+      "depth": 3
+    }]
   }
 }
