--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "autoprefixer": "^9.6.1",
     "gatsby": "^2.15.14",
+    "gatsby-plugin-typescript": "^2.1.12",
     "postcss-custom-media": "^7.0.8",
     "postcss-custom-properties": "^9.0.2",
     "postcss-import": "^12.0.1",
