--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
     }
   },
   "rules": {
+    "react/prop-types": 0,
     "react/jsx-filename-extension": [
       2,
       { "extensions": [".js", ".jsx", ".ts", ".tsx"] }
@@ -23,27 +24,3 @@
     "comma-dangle": ["error", "never"]
   }
 }
-
-// {
-//   "extends": ["airbnb", "prettier"],
-//   "env": {
-//     "browser": true,
-//     "node": true
-//   },
-//   "parser": "babel-eslint",
-//   "plugins": ["babel", "prettier"],
-//   "root": true,
-//   "rules": {
-//     "comma-dangle": ["error", "never"],
-//     "prettier/prettier": ["error"],
-//     "import/no-cycle": [0, { "maxDepth": 5 }],
-//     "react/jsx-props-no-spreading": [0],
-//     "import/no-useless-path-segments": [0, {
-//       "noUselessIndex": false
-//     }],
-//     "jsx-a11y/label-has-associated-control": [ 2, {
-//       "controlComponents": ["Input"],
-//       "depth": 3
-//     }]
-//   }
-// }
