--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
+    "api": "json-server db.json",
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "build-storybook": "build-storybook",
+    "develop": "node_modules/.bin/babel-node --presets @babel/preset-typescript --extensions '.ts,.tsx' node_modules/.bin/gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "start": "npm run develop",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \"",
+    "start": "npm run develop & npm run api",
     "storybook": "start-storybook -p 6006 -s ./static",
-    "build-storybook": "build-storybook"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
   },
   "dependencies": {
     "autoprefixer": "^9.6.1",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
+    "@babel/node": "^7.6.3",
     "@storybook/addon-actions": "^5.2.3",
     "@storybook/addon-links": "^5.2.3",
     "@storybook/addons": "^5.2.3",
