Adjust eslint for custom label/input control settings

--- a/.eslintrc
+++ b/.eslintrc
@@ -24,6 +24,10 @@
     "arrow-parens": [0, "as-needed"],
     "comma-dangle": ["error", "never"],
     "import/no-cycle": [0, { "maxDepth": 5 }],
-    "react/jsx-props-no-spreading": [0]
+    "react/jsx-props-no-spreading": [0],
+    "jsx-a11y/label-has-associated-control": [ 2, {
+      "controlComponents": ["Input"],
+      "depth": 3
+    }]
   }
 }
