Convert service APIs to typscript

--- a/.eslintrc
+++ b/.eslintrc
@@ -28,6 +28,9 @@
     "jsx-a11y/label-has-associated-control": [ 2, {
       "controlComponents": ["Input"],
       "depth": 3
-    }]
+    }],
+    "env": {
+      "browser": true
+    }
   }
 }
