--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "serve": "gatsby serve",
     "start": "npm run develop & npm run api",
     "storybook": "start-storybook -p 6006 -s ./static",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \"",
+    "open cypress": "cypress open"
   },
   "dependencies": {
     "autoprefixer": "^9.6.1",
