--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "serve": "gatsby serve",
     "start": "npm run develop & npm run api",
     "storybook": "start-storybook -p 6006 -s ./static",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \"",
+    "test": "jest",
     "open cypress": "cypress open"
   },
   "dependencies": {
@@ -42,10 +42,19 @@
     "@storybook/addon-links": "^5.2.3",
     "@storybook/addons": "^5.2.3",
     "@storybook/react": "^5.2.3",
+    "@types/enzyme": "^3.10.3",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/jest": "^24.0.19",
+    "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "^2.3.3",
     "@typescript-eslint/parser": "^2.3.3",
     "babel-eslint": "^10.0.3",
+    "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
+    "babel-preset-gatsby": "^0.2.20",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "enzyme-to-json": "^3.4.2",
     "eslint": "^6.3.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.2.0",
@@ -57,8 +66,11 @@
     "eslint-plugin-react": "^7.14.3",
     "gatsby-plugin-postcss": "^2.1.7",
     "gatsby-plugin-react-svg": "^2.1.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^24.9.0",
     "json-server": "^0.15.1",
     "prettier": "^1.18.2",
+    "ts-jest": "^24.1.0",
     "typescript": "^3.6.4"
   },
   "repository": {
