--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "serve": "gatsby serve",
     "start": "npm run develop & npm run api",
     "storybook": "start-storybook -p 6006 -s ./static",
-    "test": "TZ=Europe/Amsterdam jest",
+    "test": "TZ=Europe/Amsterdam LANG=nl_NL.UTF-8 LC_ALL=nl_NL.UTF-8 jest",
     "open cypress": "cypress open"
   },
   "dependencies": {
