--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.19",
     "@types/node": "^12.11.1",
+    "@types/react-redux": "^7.1.5",
     "@typescript-eslint/eslint-plugin": "^2.3.3",
     "@typescript-eslint/parser": "^2.3.3",
     "babel-eslint": "^10.0.3",
@@ -66,6 +67,7 @@
     "eslint-plugin-react": "^7.14.3",
     "gatsby-plugin-postcss": "^2.1.7",
     "gatsby-plugin-react-svg": "^2.1.2",
+    "gatsby-plugin-styled-components": "^3.1.11",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
     "json-server": "^0.15.1",
